// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add additional base filters to search call with one filter and query applied 2`] = `
{
  "results": [
    {
      "appliedRules": [],
      "exhaustive": {
        "facetsCount": true,
        "nbHits": true,
        "typo": true,
      },
      "exhaustiveFacetsCount": true,
      "exhaustiveNbHits": true,
      "exhaustiveTypo": true,
      "facets": {
        "actors": {
          "Bob Gunton": 1,
          "Morgan Freeman": 1,
          "Tim Robbins": 1,
          "William Sadler": 1,
        },
        "rated": {
          "R": 1,
        },
        "type": {
          "movie": 1,
        },
      },
      "facets_stats": {},
      "hits": [
        {
          "_highlightResult": {
            "actors": [
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Tim Robbins",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Morgan Freeman",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Bob Gunton",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "William Sadler",
              },
            ],
            "title": {
              "fullyHighlighted": false,
              "matchLevel": "full",
              "matchedWords": [
                "Shawshank",
              ],
              "value": "The <em>Shawshank</em> Redemption",
            },
          },
          "actors": [
            "Tim Robbins",
            "Morgan Freeman",
            "Bob Gunton",
            "William Sadler",
          ],
          "objectID": "tt0111161",
          "title": "The Shawshank Redemption",
        },
      ],
      "hitsPerPage": 20,
      "index": "imdb_movies",
      "nbHits": 1,
      "nbPages": 1,
      "page": 0,
      "params": "facetFilters=type%3Amovie&facets=*&highlightPostTag=%3C%2Fem%3E&highlightPreTag=%3Cem%3E&maxValuesPerFacet=10&page=0&query=&tagFilters=&filters=imdbrating%3A%3E%3D1+AND+type%3Amovie",
      "processingTimeMS": 2,
      "query": "",
      "renderingContent": {
        "facetOrdering": {
          "facets": {
            "order": [
              "type",
              "actors",
              "rated",
            ],
          },
          "values": {
            "actors": {
              "sortRemainingBy": "count",
            },
            "rated": {
              "sortRemainingBy": "count",
            },
            "type": {
              "sortRemainingBy": "count",
            },
          },
        },
      },
    },
    {
      "appliedRules": [],
      "exhaustive": {
        "facetsCount": true,
        "nbHits": true,
        "typo": true,
      },
      "exhaustiveFacetsCount": true,
      "exhaustiveNbHits": true,
      "exhaustiveTypo": true,
      "facets": {
        "type": {
          "movie": 1,
        },
      },
      "facets_stats": {},
      "hits": [
        {
          "_highlightResult": {
            "actors": [
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Tim Robbins",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Morgan Freeman",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Bob Gunton",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "William Sadler",
              },
            ],
            "title": {
              "fullyHighlighted": false,
              "matchLevel": "full",
              "matchedWords": [
                "Shawshank",
              ],
              "value": "The <em>Shawshank</em> Redemption",
            },
          },
          "actors": [
            "Tim Robbins",
            "Morgan Freeman",
            "Bob Gunton",
            "William Sadler",
          ],
          "objectID": "tt0111161",
          "title": "The Shawshank Redemption",
        },
      ],
      "hitsPerPage": 1,
      "index": "imdb_movies",
      "nbHits": 1,
      "nbPages": 1,
      "page": 0,
      "params": "analytics=false&attributesToHighlight=&attributesToRetrieve=&attributesToSnippet=&clickAnalytics=false&facets=type&highlightPostTag=%3C%2Fem%3E&highlightPreTag=%3Cem%3E&hitsPerPage=1&maxValuesPerFacet=10&page=0&query=&tagFilters=&filters=imdbrating%3A%3E%3D1+AND+type%3Amovie",
      "processingTimeMS": 2,
      "query": "",
      "renderingContent": {
        "facetOrdering": {
          "facets": {
            "order": [
              "type",
              "actors",
              "rated",
            ],
          },
          "values": {
            "actors": {
              "sortRemainingBy": "count",
            },
            "rated": {
              "sortRemainingBy": "count",
            },
            "type": {
              "sortRemainingBy": "count",
            },
          },
        },
      },
    },
  ],
}
`;

exports[`Add additional base filters to search call with one filter and query applied: ES Request 1`] = `
"{"index":"imdb_movies"}
{"aggs":{"type":{"terms":{"field":"type","size":10}},"actors":{"terms":{"field":"actors.keyword","size":10}},"rated":{"terms":{"field":"rated","size":10}}},"query":{"bool":{"filter":[{"bool":{"should":[{"term":{"type":"movie"}}]}},{"query_string":{"query":"imdbrating:>=1 AND type:movie"}},{"bool":{"must":{"range":{"imdbrating":{"gte":1}}}}}],"must":{"match_all":{}}}},"size":20,"from":0,"_source":{"includes":["title","actors","query"]},"highlight":{"pre_tags":["<em>"],"post_tags":["</em>"],"fields":{"title":{"number_of_fragments":0},"actors":{"number_of_fragments":0}}}}
{"index":"imdb_movies"}
{"aggs":{"type":{"terms":{"field":"type","size":10}}},"query":{"bool":{"filter":[{"query_string":{"query":"imdbrating:>=1 AND type:movie"}},{"bool":{"must":{"range":{"imdbrating":{"gte":1}}}}}],"must":{"match_all":{}}}},"size":1,"from":0,"_source":{"includes":["title","actors","query"]},"highlight":{"pre_tags":["<em>"],"post_tags":["</em>"],"fields":{"title":{"number_of_fragments":0},"actors":{"number_of_fragments":0}}}}
"
`;

exports[`Add additional base filters to search filters not being facets 2`] = `
{
  "results": [
    {
      "appliedRules": [],
      "exhaustive": {
        "facetsCount": true,
        "nbHits": true,
        "typo": true,
      },
      "exhaustiveFacetsCount": true,
      "exhaustiveNbHits": true,
      "exhaustiveTypo": true,
      "facets": {
        "actors": {
          "Bob Gunton": 1,
          "Morgan Freeman": 1,
          "Tim Robbins": 1,
          "William Sadler": 1,
        },
        "rated": {
          "R": 1,
        },
        "type": {
          "movie": 1,
        },
      },
      "facets_stats": {},
      "hits": [
        {
          "_highlightResult": {
            "actors": [
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Tim Robbins",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Morgan Freeman",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Bob Gunton",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "William Sadler",
              },
            ],
            "title": {
              "fullyHighlighted": false,
              "matchLevel": "full",
              "matchedWords": [
                "Shawshank",
              ],
              "value": "The <em>Shawshank</em> Redemption",
            },
          },
          "actors": [
            "Tim Robbins",
            "Morgan Freeman",
            "Bob Gunton",
            "William Sadler",
          ],
          "objectID": "tt0111161",
          "title": "The Shawshank Redemption",
        },
      ],
      "hitsPerPage": 20,
      "index": "imdb_movies",
      "nbHits": 1,
      "nbPages": 1,
      "page": 0,
      "params": "facetFilters=writers%3AQuentin+Tarantino&facets=writers&highlightPostTag=%3C%2Fem%3E&highlightPreTag=%3Cem%3E&maxValuesPerFacet=10&page=0&query=&tagFilters=",
      "processingTimeMS": 2,
      "query": "",
      "renderingContent": {
        "facetOrdering": {
          "facets": {
            "order": [
              "type",
              "actors",
              "rated",
            ],
          },
          "values": {
            "actors": {
              "sortRemainingBy": "count",
            },
            "rated": {
              "sortRemainingBy": "count",
            },
            "type": {
              "sortRemainingBy": "count",
            },
          },
        },
      },
    },
    {
      "appliedRules": [],
      "exhaustive": {
        "facetsCount": true,
        "nbHits": true,
        "typo": true,
      },
      "exhaustiveFacetsCount": true,
      "exhaustiveNbHits": true,
      "exhaustiveTypo": true,
      "facets": {
        "type": {
          "movie": 1,
        },
      },
      "facets_stats": {},
      "hits": [
        {
          "_highlightResult": {
            "actors": [
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Tim Robbins",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Morgan Freeman",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "Bob Gunton",
              },
              {
                "matchLevel": "none",
                "matchedWords": [],
                "value": "William Sadler",
              },
            ],
            "title": {
              "fullyHighlighted": false,
              "matchLevel": "full",
              "matchedWords": [
                "Shawshank",
              ],
              "value": "The <em>Shawshank</em> Redemption",
            },
          },
          "actors": [
            "Tim Robbins",
            "Morgan Freeman",
            "Bob Gunton",
            "William Sadler",
          ],
          "objectID": "tt0111161",
          "title": "The Shawshank Redemption",
        },
      ],
      "hitsPerPage": 1,
      "index": "imdb_movies",
      "nbHits": 1,
      "nbPages": 1,
      "page": 0,
      "params": "analytics=false&attributesToHighlight=&attributesToRetrieve=&attributesToSnippet=&clickAnalytics=false&facets=writers&highlightPostTag=%3C%2Fem%3E&highlightPreTag=%3Cem%3E&hitsPerPage=1&maxValuesPerFacet=10&page=0&query=&tagFilters=&facetFilters=writers%3AQuentin+Tarantino",
      "processingTimeMS": 2,
      "query": "",
      "renderingContent": {
        "facetOrdering": {
          "facets": {
            "order": [
              "type",
              "actors",
              "rated",
            ],
          },
          "values": {
            "actors": {
              "sortRemainingBy": "count",
            },
            "rated": {
              "sortRemainingBy": "count",
            },
            "type": {
              "sortRemainingBy": "count",
            },
          },
        },
      },
    },
  ],
}
`;

exports[`Add additional base filters to search filters not being facets: ES Request 1`] = `
"{"index":"imdb_movies"}
{"aggs":{},"query":{"bool":{"filter":[{"term":{"writers":"Quentin Tarantino"}}],"must":{"match_all":{}}}},"size":20,"from":0,"_source":{"includes":["title","actors","query"]},"highlight":{"pre_tags":["<em>"],"post_tags":["</em>"],"fields":{"title":{"number_of_fragments":0},"actors":{"number_of_fragments":0}}}}
{"index":"imdb_movies"}
{"aggs":{},"query":{"bool":{"filter":[{"term":{"writers":"Quentin Tarantino"}}],"must":{"match_all":{}}}},"size":1,"from":0,"_source":{"includes":["title","actors","query"]},"highlight":{"pre_tags":["<em>"],"post_tags":["</em>"],"fields":{"title":{"number_of_fragments":0},"actors":{"number_of_fragments":0}}}}
"
`;
